# UTRobotics

./: README.md  build-customize.xml  build.properties
ApolloDebug/ApolloDebug/: ApolloDebug.sln
ApolloDebug/ApolloDebug/ApolloDebug/: ApolloDebug.csproj  ApolloListener.cs  App.config  Program.cs  SettingsForm.Designer.cs  SettingsForm.cs  SettingsForm.resx
BalanceBeamArduino/: BalanceBeamArduino.ino  README.txt  RFID.ino  pins.ino  poti.ino  reeds.ino
BalanceBeamArduino/libraries/rfid-master/: MFRC522.cpp  MFRC522.h
EyePi/: README.txt
EyePi/faceduino/: faceduino.ino  libraries.rar
EyePi/ramSocialRobot/: ramSocialRobot.launch  start_just_motor_control.launch
EyePi/ramSocialRobot/src/ram_animation/ram_animation/: CMakeLists.txt  package.xml
EyePi/ramSocialRobot/src/ram_animation/ram_animator/: CMakeLists.txt  package.xml
EyePi/ramSocialRobot/src/ram_animation/ram_animator/include/ram_animator/: _sequence_timing.hpp
EyePi/ramSocialRobot/src/ram_animation/ram_animator/src/: ram_animator_node.cpp  ram_animator_node.hpp
EyePi/ramSocialRobot/src/ram_animation/ram_animator/src/sequences/: defaults.cpp  demo.cpp
EyePi/ramSocialRobot/src/ram_animation/ram_hmmm/: CMakeLists.txt  package.xml
EyePi/ramSocialRobot/src/ram_animation/ram_hmmm/cfg/: RamHmmm.cfg
EyePi/ramSocialRobot/src/ram_animation/ram_hmmm/src/: ram_hmmm_node.cpp  ram_hmmm_node.hpp
EyePi/ramSocialRobot/src/ram_animation/ram_midi_to_animation/: CMakeLists.txt  package.xml
EyePi/ramSocialRobot/src/ram_animation/ram_midi_to_animation/src/: ram_midi_to_animation_node.cpp
EyePi/ramSocialRobot/src/ram_animation/ram_safe_shutdown/: CMakeLists.txt  package.xml
EyePi/ramSocialRobot/src/ram_animation/ram_safe_shutdown/src/: ram_safe_shutdown_node.cpp
EyePi/ramSocialRobot/src/ram_asap/asap_ros_bridge/: package.xml
EyePi/ramSocialRobot/src/ram_asap/asap_ros_bridge/scripts/: relay.py  xml_conversion.py
EyePi/ramSocialRobot/src/ram_asap/ram_asap/: CMakeLists.txt  package.xml
EyePi/ramSocialRobot/src/ram_camera/ram_camera/: CMakeLists.txt  package.xml
EyePi/ramSocialRobot/src/ram_camera/ram_motion_detection/: CMakeLists.txt  package.xml
EyePi/ramSocialRobot/src/ram_camera/ram_motion_detection/cfg/: RamMotionDetection.cfg
EyePi/ramSocialRobot/src/ram_camera/ram_motion_detection/src/: ram_motion_detection_node.cpp
EyePi/ramSocialRobot/src/ram_dynamixel/ram_dynamixel/: CMakeLists.txt  package.xml
EyePi/ramSocialRobot/src/ram_dynamixel/ram_dynamixel_config/: CMakeLists.txt  config.yml  controller.launch  package.xml  shutdown_config.yml  shutdown_controller.launch  shutdown_manager.launch
EyePi/ramSocialRobot/src/ram_dynamixel/ram_pose_to_dynamixel/: CMakeLists.txt  package.xml
EyePi/ramSocialRobot/src/ram_dynamixel/ram_pose_to_dynamixel/src/: ram_pose_to_dynamixel_node.cpp
EyePi/ramSocialRobot/src/ram_input/ram_input/: CMakeLists.txt  package.xml
EyePi/ramSocialRobot/src/ram_input/ram_midi_driver/: CMakeLists.txt  package.xml
EyePi/ramSocialRobot/src/ram_input/ram_midi_driver/scripts/: ram_midi_driver_input_node.py  ram_midi_driver_output_node.py
EyePi/ramSocialRobot/src/ram_messages/ram_animation_msgs/: CMakeLists.txt  package.xml
EyePi/ramSocialRobot/src/ram_messages/ram_animation_msgs/include/ram_animation_msgs/: animatorConstants.hpp
EyePi/ramSocialRobot/src/ram_messages/ram_animation_msgs/msg/: Animation.msg  EnabledModule.msg  Face.msg
EyePi/ramSocialRobot/src/ram_messages/ram_input_msgs/: CMakeLists.txt  package.xml
EyePi/ramSocialRobot/src/ram_messages/ram_input_msgs/include/ram_input_msgs/: inputConstants.hpp
EyePi/ramSocialRobot/src/ram_messages/ram_input_msgs/msg/: Emotion.msg  Midi.msg  Saliency.msg  Sequence.msg
EyePi/ramSocialRobot/src/ram_messages/ram_messages/: CMakeLists.txt  package.xml
EyePi/ramSocialRobot/src/ram_messages/ram_output_msgs/: CMakeLists.txt  package.xml
EyePi/ramSocialRobot/src/ram_messages/ram_output_msgs/include/ram_output_msgs/: feedbackConstants.hpp
EyePi/ramSocialRobot/src/ram_messages/ram_output_msgs/msg/: GeneralFeedback.msg  MidiOutput.msg  PredictFeedback.msg
EyePi/ramSocialRobot/src/ram_simulation/joints_sim/: CMakeLists.txt  RvizBodyConfig.rviz  RvizConfigFace.rviz  display.launch  my_robot.urdf  package.xml
EyePi/ramSocialRobot/src/ram_simulation/joints_sim/3d/: MX-64T.dae  RX-28.dae  RX-64.dae  face.blend  face.blend1  face.dae
EyePi/ramSocialRobot/src/ram_simulation/joints_sim/3d/examplewithimags/: HTC Evo low poly.dae
EyePi/ramSocialRobot/src/ram_simulation/joints_sim/src/: state_publisher.cpp
HmiRoboUtils/: README.txt  setup.sh
HmiRoboUtils/apps/bcfapp/: bcfapp.py
HmiRoboUtils/apps/genericcontrolapp/: genericcontrolapp.py  messagedisplay.py  valuedisplay.py
HmiRoboUtils/apps/turtleapp/: turtleapp.py  turtlesim.py
HmiRoboUtils/docs/: Makefile  applications.rst  conf.py  index.rst  make.bat  protocol.rst  settingup.rst
HmiRoboUtils/robotutils/: __init__.py  bcfinterface.py  config.py  qt.py  setup.py  xmlutils.py
HmiRoboUtils/rosmodules/ram_asap/asap_ros_bridge/: CMakeLists.txt
HmiRoboUtils/rosmodules/ram_asap/asap_ros_bridge/scripts/: relay.py
HmiRoboUtils/tests/: basic_stomp1.py  bcf2000.py  sarobotapp.py  stupidlistener.py
JavaModules/AsapEyePiEngine/: TODO.txt  build.properties  build.xml  ivy.xml  manifest.mf
JavaModules/AsapZenoEngine/: .gitignore  build.properties  build.xml  ivy.xml  manifest.mf
JavaModules/HmiBalanceBeam/: .gitignore  README.txt  build.properties  build.xml  ivy.xml  manifest.mf
JavaModules/HmiFlipperMiddlewareExtension/: .gitignore  build.properties  build.xml  ivy.xml  manifest.mf
JavaModules/HmiUSBCommunication/: build.properties  build.xml  ivy.xml  manifest.mf
JavaModules/HmiYarp/: .gitignore  README.txt  build.properties  build.xml  ivy.xml  manifest.mf
JavaModules/ZenoRobotControllerInterface/: .gitignore  build.properties  build.xml  ivy.xml  manifest.mf
JavaModules/ZenoRobotControllerMechioImpl/: .gitignore  TODO.txt  build.properties  build.xml  ivy.xml  manifest.mf
RamKinect/: README.txt
RamKinect/KinectSkeleton/: KinectSkeleton.sln
(+472 files in other folders)
