<?xml version="1.0"?>
<package>

    <name>asap_ros_bridge</name>
    <version>0.2.0</version>
    <description>The asap_ros_bridge package, which forms a bridge between asap (Apache Apollo) en ROS</description>
    <maintainer email="d.reidsma@utwente.nl">D. Reidsma</maintainer>
    <maintainer email="b.vandevijver@student.utwente.nl">B. van de Vijver</maintainer>
    <author email="d.reidsma@utwente.nl">D. Reidsma</author>
    <maintainer email="b.vandevijver@student.utwente.nl">B. van de Vijver</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>ram_input_msgs</build_depend>
    <build_depend>ram_animation_msgs</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>ram_input_msgs</run_depend>
    <run_depend>ram_animation_msgs</run_depend>

</package>