<?xml version="1.0"?>
<package>

    <name>ram_asap</name>
    <version>0.1.0</version>
    <description>The RAM asap package contains several modules for communication with asap</description>
    <maintainer email="b.vandevijver@student.utwente.nl">B. van de Vijver</maintainer>
    <author email="b.vandevijver@student.utwente.nl">B. van de Vijver</author>
    <license>GPLv2</license>


    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>asap_realizer_bridge</run_depend>
    <run_depend>bridge</run_depend>

    <export>
        <metapackage/>
    </export>
</package>
