<?xml version="1.0"?>
<package>
    <name>ram_camera</name>
    <version>0.1.0</version>
    <description>The RAM camera package contains several modules which use available camera images</description>
    <maintainer email="b.vandevijver@student.utwente.nl">B. van de Vijver</maintainer>
    <author email="b.vandevijver@student.utwente.nl">B. van de Vijver</author>
    <license>GPLv2</license>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>ram_camera_saliency</run_depend>

    <export>
        <metapackage/>
    </export>
</package>
