<?xml version="1.0"?>
<package>

    <name>ram_motion_detection</name>
    <version>0.1.0</version>
    <description>The ram_motion_detection package</description>
    <maintainer email="b.vandevijver@student.utwente.nl">Bob van de Vijver</maintainer>
    <author email="b.vandevijver@student.utwente.nl">B. van de Vijver</author>
    <license>GPLv2</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>ram_input_msgs</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>ram_input_msgs</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>

</package>