<?xml version="1.0"?>
<package>

    <name>ram_dynamixel</name>
    <version>0.1.0</version>
    <description>The RAM dynamixel package which contains several modules for dynamixel communication</description>
    <maintainer email="b.vandevijver@student.utwente.nl">B. van de Vijver</maintainer>
    <author email="b.vandevijver@student.utwente.nl">B. van de Vijver</author>
    <license>GPLv2</license>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>ram_pose_to_dynamixel</run_depend>
    <run_depend>ram_dynamixel_config</run_depend>

    <export>
        <metapackage/>
    </export>

</package>
