<?xml version="1.0"?>
<package>

    <name>ram_dynamixel_config</name>
    <version>0.0.0</version>
    <description>The ram_dynamixel_config package</description>
    <maintainer email="b.vandevijver@student.utwente.nl">Bob van de Vijver</maintainer>
    <author email="j.oosterkamp@student.utwente.nl">Jens Oosterkamp</author>
    <license>GPLv2</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>dynamixel_controllers</build_depend>

    <run_depend>dynamixel_controllers</run_depend>

</package>