<?xml version="1.0"?>
<package>

    <name>ram_pose_to_dynamixel</name>
    <version>0.2.0</version>
    <description>The ram_pose_to_dynamixel package</description>
    <maintainer email="b.vandevijver@student.utwente.nl">B. van de Vijver</maintainer>
    <author email="j.oosterkamp@student.utwente.nl">Jens Oosterkamp</author>
    <license>GPLv2</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>

</package>