<?xml version="1.0"?>
<package>

    <name>ram_messages</name>
    <version>0.1.0</version>
    <description>The RAM messages package contains all messages used for communication</description>
    <maintainer email="b.vandevijver@student.utwente.nl">B. van de Vijver</maintainer>
    <author email="b.vandevijver@student.utwente.nl">B. van de Vijver</author>
    <license>GPLv2</license>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>ram_animation_msgs</run_depend>
    <run_depend>ram_input_msgs</run_depend>
    <run_depend>ram_output_msgs</run_depend>

    <export>
        <metapackage/>
    </export>

</package>
